log/build_2024-05-07_14-33-06/my_docking/stdout_stderr.log
running egg_info
writing ../../build/my_docking/my_docking.egg-info/PKG-INFO
writing dependency_links to ../../build/my_docking/my_docking.egg-info/dependency_links.txt
writing entry points to ../../build/my_docking/my_docking.egg-info/entry_points.txt
writing requirements to ../../build/my_docking/my_docking.egg-info/requires.txt
writing top-level names to ../../build/my_docking/my_docking.egg-info/top_level.txt
reading manifest file '../../build/my_docking/my_docking.egg-info/SOURCES.txt'
writing manifest file '../../build/my_docking/my_docking.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/docking_server_trial.py to docking_server_trial.cpython-310.pyc
  File "/home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/docking_server_trial.py", line 67
    if len(msg.poses) > 0 and :
                              ^
SyntaxError: invalid syntax

byte-compiling /home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/dockingtwo_action_server.py to dockingtwo_action_server.cpython-310.pyc
  File "/home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/dockingtwo_action_server.py", line 77
    feedback_msg.
                 ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_docking/my_docking.egg-info to /home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking-0.0.0-py3.10.egg-info
running install_scripts
Installing docking script to /home/oh/slam_ws/install/my_docking/lib/my_docking
writing list of installed files to '/home/oh/slam_ws/build/my_docking/install.log'
